Fixed menu item border boxes not fitting text

--- a/src/css/mystyles.css
+++ b/src/css/mystyles.css
@@ -115,4 +115,5 @@ body {
   padding: clamp(0.25rem, 0.5vw, 1rem) 0rem;
   text-decoration: none;
   transition: opacity 400ms ease;
+  width: fit-content;
 }
